Use OpenSearch 2.3 java client